fix(firefox): fix left sidebar border alignment in private tab

--- a/nixos/home/firefox/custom.css
+++ b/nixos/home/firefox/custom.css
@@ -38,4 +38,7 @@ slot {
   :root:not([chromehidden~="toolbar"]) #PersonalToolbar {
     margin-top: -103.5px !important;
   }
+  :root[privatebrowsingmode]:not([chromehidden~="toolbar"]) #PersonalToolbar {
+    margin-top: -106.5px !important;
+  }
 }
